[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/PixelSpaceRage/256px/PlayerBlue_Frame_01_png_processed.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/PixelSpaceRage/256px/PlayerBlue_Frame_02_png_processed.png" type="Texture" id=3]
[ext_resource path="res://assets/PixelSpaceRage/256px/PlayerBlue_Frame_03_png_processed.png" type="Texture" id=4]
[ext_resource path="res://assets/PixelSpaceRage/256px/Exhaust_Frame_01_png_processed.png" type="Texture" id=5]
[ext_resource path="res://assets/PixelSpaceRage/256px/GunTurret_ExampleGun_png_processed.png" type="Texture" id=6]
[ext_resource path="res://src/Projectiles/PlayerStandardBullet.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/PixelSpaceRage/256px/Exhaust_Frame_04_png_processed.png" type="Texture" id=8]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_06_png_processed.png" type="Texture" id=9]
[ext_resource path="res://assets/PixelSpaceRage/256px/Exhaust_Frame_05_png_processed.png" type="Texture" id=10]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_05_png_processed.png" type="Texture" id=11]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_07_png_processed.png" type="Texture" id=12]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_03_png_processed.png" type="Texture" id=13]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_04_png_processed.png" type="Texture" id=14]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_08_png_processed.png" type="Texture" id=15]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_01_png_processed.png" type="Texture" id=16]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_09_png_processed.png" type="Texture" id=17]
[ext_resource path="res://assets/PixelSpaceRage/256px/Explosion01_Frame_02_png_processed.png" type="Texture" id=18]
[ext_resource path="res://src/Projectiles/PlasmaBullet.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "turning",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "destroyed",
"speed": 26.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "active",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 308.951, 99.143 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 7 )
PlasmaBullet = ExtResource( 19 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -14.263, -12.6029, -3.08124, -30.5568, 1.64346, -30.7143, 28.2593, 11.0206, 21.8022, 29.9195, -20.7201, 30.2344, -30.0121, 11.8081 )

[node name="Muzzle" type="Position2D" parent="." groups=[
"player",
]]
position = Vector2( 0, -36 )

[node name="Sprite" type="Sprite" parent="Muzzle"]
position = Vector2( -0.0462289, 8.66339 )
scale = Vector2( 0.45533, 0.438769 )
texture = ExtResource( 6 )

[node name="ShipSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "destroyed"
__meta__ = {
"_edit_group_": true
}

[node name="ShipExhaustSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 28 )
frames = SubResource( 2 )
animation = "active"

[node name="HitBox" type="Area2D" parent="." groups=[
"player",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PoolVector2Array( 2.21545, -29.9663, 30.3229, 11.5763, 21.8376, 29.6075, -20.9423, 30.3146, -25.0082, 10.8692, -3.08783, -30.4966 )

[node name="SpecialMuzzleOne" type="Position2D" parent="."]
position = Vector2( 12.5, -2 )

[node name="SpecialMuzzleTwo" type="Position2D" parent="."]
position = Vector2( -14.5, -2 )

[node name="SpecialAttackTimer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_hit"]
[connection signal="timeout" from="SpecialAttackTimer" to="." method="_on_SpecialAttackTimer_timeout"]
